Moved css and some work done

--- a/static/index.html
+++ b/static/index.html
@@ -34,8 +34,8 @@ color: #FF9900;
 <div class="page-header">
 
 <!-- Title and Name --> 
-<h1>Your Title Here</h1> 
-<span style="font-size: 20px; line-height: 1.5em;"><strong>Names of Team Members Here</strong></span><br>
+<h1>Facial keypoint detection</h1> 
+<span style="font-size: 20px; line-height: 1.5em;"><strong>Sindhu Chava, Oren Collaco</strong></span><br>
 <span style="font-size: 18px; line-height: 1.5em;">Fall 2021 ECE 4554/5554 Computer Vision: Course Project</span><br>
 <span style="font-size: 18px; line-height: 1.5em;">Virginia Tech</span>
 <hr>
@@ -45,21 +45,30 @@ Please see <a href="http://vision.cs.utexas.edu/projects/adapted_attributes/">th
 <!-- Goal -->
 <h3>Abstract</h3>
 
-One or two sentences on the motivation behind the problem you are solving. One or two sentences describing the approach you took. One or two sentences on the main result you obtained.
+Facial features vary greatly from one individual to another, and even for a single individual, there is a large amount of variation due to 3D pose, size, position, viewing angle, and illumination conditions. This project is to forecast the locations of key points on facial pictures. Detecting key points on face images are building blocks of several applications:<br><br>
+1.	Face filters, which overlay facial photographs with funny objects, have become commonplace like snapchat.<br>
+2.	Analysing facial expressions play an important role in developing real-time applications for biometrics, detecting drowsiness and reading a person's emotions.<br>
+3.	Unlocking mobile phones, determine age of the person<br>
+4.	Detecting dysmorphic facial signs for medical diagnosis<br>
 <br><br>
 <!-- figure -->
-<h3>Teaser figure</h3>
-A figure that conveys the main idea behind the project or the main application being addressed.
-<br><br>
+<h3>Basic Idea</h3>
+<!-- A figure that conveys the main idea behind the project or the main application being addressed. -->
+<br><br> 
 <!-- Main Illustrative Figure --> 
 <div style="text-align: center;">
-<img style="height: 200px;" alt="" src="mainfig.png">
+<img style="height: 400px;" alt="" src="train.png">
 </div>
+
+<div style="text-align: center;">
+  <img style="height: 400px;" alt="" src="block.png">
+  </div>
 
 <br><br>
 <!-- Introduction -->
 <h3>Introduction</h3>
-Motivation behind the problem you are solving, what applications it has, any brief background on the particular domain you are working in (if not regular RBG photographs), etc. If you are using a new way to solve an existing problem, briefly mention and describe the existing approaches and tell us how your approach is new.
+One of the most distinguishing features of humans is their face. Through evolution, it has become the primary method of identifying other people and expressing feelings and emotions to others. Identifying and classifying faces thus is a crucial task in many computer vision applications. Basic identification of faces allows one to track the number of people in an image. Identifying key facial features can be potentially used to identify facial expressions, which can be further extrapolated to recognising emotions and identifying emotions of a person in an image opens a lot of doors to perform further processing such as in criminal situations where it is crucial to know what state of mind someone is in. 
+<!-- <br>  Motivation behind the problem you are solving, what applications it has, any brief background on the particular domain you are working in (if not regular RBG photographs), etc. If you are using a new way to solve an existing problem, briefly mention and describe the existing approaches and tell us how your approach is new. -->
 
 <br><br>
 <!-- Approach -->
@@ -97,13 +106,14 @@ This report has described .... Briefly summarize what you have done.
 
 <!-- References -->
 <h3>References</h3>
-Provide a list of references to other work that supported your project.
+<a href="https://www.kaggle.com/balraj98/data-augmentation-for-facial-keypoint-detection">https://www.kaggle.com/balraj98/data-augmentation-for-facial-keypoint-detection</a>
+<a href="https://www.kaggle.com/c/facial-keypoints-detection/overview">https://www.kaggle.com/c/facial-keypoints-detection/overview</a>
 <br><br>
 
 
   <hr>
   <footer> 
-  <p>© Names of Team Members Here</p>
+  <p>© Sindhu Chava, Oren Collaco</p>
   </footer>
 </div>
 </div>
