made css classes for images

--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,8 @@ color: #FF9900;
 </style>
   
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="css/custom.css" rel="stylesheet">
+
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements --><!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -57,11 +59,11 @@ Facial features vary greatly from one individual to another, and even for a sing
 <br><br> 
 <!-- Main Illustrative Figure --> 
 <div style="text-align: center;">
-<img style="height: 400px;" alt="" src="train.png">
+<img class="img1" alt="" src="train.png">
 </div>
 
 <div style="text-align: center;">
-  <img style="height: 400px;" alt="" src="block.png">
+  <img class="img2" alt="" src="block.png">
   </div>
 
 <br><br>
@@ -83,10 +85,11 @@ Provide details about the experimental set up (number of images/videos, number o
 <br><br>
 
 <!-- Main Results Figure --> 
-<div style="text-align: center;">
+<!--<div style="text-align: center;">
 <img style="height: 300px;" alt="" src="results.png">
 </div>
 <br><br>
+-->
 
 <!-- Results -->
 <h3>Qualitative results</h3>
@@ -106,14 +109,14 @@ This report has described .... Briefly summarize what you have done.
 
 <!-- References -->
 <h3>References</h3>
-<a href="https://www.kaggle.com/balraj98/data-augmentation-for-facial-keypoint-detection">https://www.kaggle.com/balraj98/data-augmentation-for-facial-keypoint-detection</a>
-<a href="https://www.kaggle.com/c/facial-keypoints-detection/overview">https://www.kaggle.com/c/facial-keypoints-detection/overview</a>
+<div><a href="https://www.kaggle.com/balraj98/data-augmentation-for-facial-keypoint-detection">https://www.kaggle.com/balraj98/data-augmentation-for-facial-keypoint-detection</a></div>
+<div><a href="https://www.kaggle.com/c/facial-keypoints-detection/overview">https://www.kaggle.com/c/facial-keypoints-detection/overview</a></div>
 <br><br>
 
 
   <hr>
   <footer> 
-  <p>© Sindhu Chava, Oren Collaco</p>
+  <p>© 2021 Sindhu Chava, Oren Collaco</p>
   </footer>
 </div>
 </div>
